[package]
name = "cz-cli-rs"
version = "0.1.0"
authors = ["birjolaxew <johanringmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.7.1"
regex = "1.4.2"
lazy_static = "1.4.0"
quick-error = "2.0.0"
directories = "3.0.1"
textwrap = "0.13.0"
indoc = "1.0"